syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
option csharp_namespace = "Videa.ImportRateCard.Service.Proto.Types";

service ExcelRateCardImportService {
	rpc ImportRateCard (ImportRateCardRequest) returns (ImportRateCardResponse) {}
}
message ImportRateCardRequest {
}
message ImportRateCardResponse {
}

